--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "tui-g_rule"
-version = "0.1.3"
+name = "tui-rule"
+version = "0.1.1"
 edition = "2024"
 authors = ["F-77777"]
 license = "MIT"
@@ -11,19 +11,14 @@ doctest = false
 
 [dependencies]
 colorgrad = "0.7.0"
-crossterm = "0.28.1"
+crossterm = { version = "0.28.1", optional = true }
 derive_builder = "0.20.2"
 getset = "0.1.5"
 ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
+serde = { version = "1.0.219", features = ["derive"], optional = true }
+true = { version = "0.1.0", optional = true }
 
-[[example]]
-name = "hor_gradient_padding"
-path = "examples/hor_gradient_padding/hor_gradient_padding.rs"
-
-[[example]]
-name = "vert_gradient_padding"
-path = "examples/vert_gradient_padding/vert_gradient_padding.rs"
-
-[[example]]
-name = "no_gradient"
-path = "examples/no_gradient/no_gradient.rs"
+[features]
+default = ["all"]
+all = ["utils", "serde", "crossterm"]
+utils = []
